对所有启动方式启用紧凑对象头